force-app/main/default/objects/Route__c/Route__c.object-meta.xml
<CustomObject>
    <label>ルート</label>
    <nameField>
        <displayFormat>RL-{000000}</displayFormat>
        <label>ROUTE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>