force-app/main/default/objects/Route__c/fields/BLNumber__c.field-meta.xml
<CustomField>
    <fullName>BLNumber__c</fullName>
    <label>B/L Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>