force-app/main/default/objects/Route__c/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHASSIS ID</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>ROUTE (CHASSIS)</relationshipLabel>
    <relationshipName>RouteChassis</relationshipName>
    <type>Lookup</type>
</CustomField>