force-app/main/default/objects/Route__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DELIVERY ID</label>
    <referenceTo>Cargo_Delivery__c</referenceTo>
    <relationshipLabel>ROUTE</relationshipLabel>
    <relationshipName>ROUTE_LOAD</relationshipName>
    <type>Lookup</type>
</CustomField>