force-app/main/default/objects/Route__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRIVER</label>
    <referenceTo>WORKER__c</referenceTo>
    <relationshipName>ROUTE_LOAD</relationshipName>
    <type>Lookup</type>
</CustomField>