force-app/main/default/objects/Route__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>END TIME</label>
    <type>DateTime</type>
</CustomField>