force-app/main/default/objects/Route__c/fields/MaxTEU__c.field-meta.xml
<CustomField>
    <fullName>MaxTEU__c</fullName>
    <formula>Truck__r.TEU__c</formula>
    <label>Max TEU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>