force-app/main/default/objects/Route__c/fields/NumberOfAssignment__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAssignment__c</fullName>
    <label>NUMBER OF ASSIGNMENT</label>
    <summaryForeignKey>LoadingLocation__c.Route__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>