force-app/main/default/objects/Route__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>ROUTE (P.O.D)</relationshipLabel>
    <relationshipName>RoutePOD</relationshipName>
    <type>Lookup</type>
</CustomField>