force-app/main/default/objects/Route__c/fields/RoutingDate__c.field-meta.xml
<CustomField>
    <fullName>RoutingDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>ROUTING START DATE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>