force-app/main/default/objects/Route__c/fields/RoutingEndDate__c.field-meta.xml
<CustomField>
    <fullName>RoutingEndDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>ROUTING END DATE</label>
    <type>Date</type>
</CustomField>