force-app/main/default/objects/Route__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>START TIME</label>
    <type>DateTime</type>
</CustomField>