force-app/main/default/objects/Route__c/fields/TotalDistanceKM__c.field-meta.xml
<CustomField>
    <fullName>TotalDistanceKM__c</fullName>
    <label>TOTAL DISTANCE(KM)</label>
    <summarizedField>LoadingLocation__c.DistanceKM__c</summarizedField>
    <summaryForeignKey>LoadingLocation__c.Route__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>