force-app/main/default/objects/Route__c/fields/TransitPort2__c.field-meta.xml
<CustomField>
    <fullName>TransitPort2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port-2</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>ROUTE (TRANSIT PORT-2)</relationshipLabel>
    <relationshipName>TransitPort2</relationshipName>
    <type>Lookup</type>
</CustomField>