force-app/main/default/objects/Route__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCK ID</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>ROUTE (TRUCK)</relationshipLabel>
    <relationshipName>RouteTruck</relationshipName>
    <type>Lookup</type>
</CustomField>