force-app/main/default/objects/Route__c/validationRules/TRUCK_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>TRUCK_REQUIRED</fullName>
    <active>true</active>
    <description>TRUCK FLEET is required for ROUTE/LOAD</description>
    <errorConditionFormula>ISBLANK(Truck__c)</errorConditionFormula>
    <errorDisplayField>Truck__c</errorDisplayField>
    <errorMessage>TRUCK is required for ROUTE/LOAD</errorMessage>
</ValidationRule>