force-app/main/default/objects/Route__c/listViews/ROUTE_TODAY.listView-meta.xml
<ListView>
    <fullName>ROUTE_TODAY</fullName>
    <columns>NAME</columns>
    <columns>Truck__c</columns>
    <columns>Chassis__c</columns>
    <columns>RoutingDate__c</columns>
    <columns>RoutingEndDate__c</columns>
    <columns>Delivery__c</columns>
    <columns>Driver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RoutingDate__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>ROUTE-TODAY</label>
    <language>en_US</language>
</ListView>