force-app/main/default/objects/Route__c/listViews/RouteAll.listView-meta.xml
<ListView>
    <fullName>RouteAll</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Driver__c</columns>
    <columns>Truck__c</columns>
    <columns>Delivery__c</columns>
    <columns>DeliveryStatus__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>POL__c</columns>
    <columns>POD__c</columns>
    <columns>RoutingEndDate__c</columns>
    <columns>RoutingDate__c</columns>
    <columns>TotalCargoMeasurement__c</columns>
    <columns>TotalDistanceKM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>