force-app/main/default/objects/Route__c/listViews/RouteInPlan.listView-meta.xml
<ListView>
    <fullName>RouteInPlan</fullName>
    <columns>NAME</columns>
    <columns>Truck__c</columns>
    <columns>DeliveryStatus__c</columns>
    <columns>POD__c</columns>
    <columns>POL__c</columns>
    <columns>RoutingDate__c</columns>
    <columns>RoutingEndDate__c</columns>
    <columns>Driver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeliveryStatus__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Route__c.Vessel</value>
    </filters>
    <label>Route in Plan</label>
</ListView>